@@ -74,6 +74,7 @@ static void synth_CallBack(Bitu len) {
 void ResolvePath(std::string& in);
 class MidiHandler_synth: public MidiHandler {
 private:
+	std::string fsinfo = "";
 	fluid_settings_t *settings;
 	int sfont_id;
 	bool isOpen;
@@ -221,6 +222,7 @@ public:
 			return false;
 		}
 		sffile=sf;
+        fsinfo="Sound font: "+sf;
 
 		synthchan = MIXER_AddChannel(synth_CallBack, (unsigned int)synthsamplerate, "SYNTH");
 		synthchan->Enable(false);
@@ -250,12 +252,18 @@ public:
 	void PlaySysex(uint8_t *sysex, Bitu len) {
 		PlayEvent(sysex, len);
 	};
+
+	void ListAll(Program* base) {
+		base->WriteOut("  %s\n",fsinfo.c_str());
+	}
+
 };
 
 MidiHandler_synth Midi_synth;
 
 class MidiHandler_fluidsynth : public MidiHandler {
 private:
+	std::string fsinfo = "";
 	std::string soundfont;
 	int soundfont_id;
 	fluid_settings_t *settings;
@@ -419,6 +427,7 @@ public:
 			}
 			else {
 				sffile=soundfont;
+				fsinfo="Sound font: "+soundfont;
 				LOG_MSG("MIDI:fluidsynth: Loaded SoundFont: %s", soundfont.c_str());
 			}
 		}
@@ -427,6 +436,10 @@ public:
 			LOG_MSG("MIDI:fluidsynth: No SoundFont loaded");
 		}
 		return true;
+	}
+
+	void ListAll(Program* base) {
+		base->WriteOut("  %s\n",fsinfo.c_str());
 	}
 };
 
