@@ -4,6 +4,9 @@
   - Fixed MOUNT and IMGMOUNT commands unable to mount
     directories or image files that contain non-ASCII
     characters in the code page on Windows. (Wengier)
+  - The command "MIXER /LISTMIDI" now lists the ROM
+    directory/files and sound fonts for MT32, Synth
+    and FluidSynth MIDI device when active. (Wengier)
   - Debugger "DOS XMS" command will only list handles
     that are allocated, or with nonzero address or
     nonzero size, to avoid showing irrelevant
